[package]
name = "forge2d"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance 2D game engine and graphics framework written in Rust, built on wgpu."
license = "MIT"
repository = "https://github.com/yourusername/forge2d"
documentation = "https://docs.rs/forge2d"
readme = "README.md"
keywords = ["game", "engine", "2d", "graphics", "wgpu"]
categories = ["game-engines", "rendering"]

[lib]
name = "forge2d"
path = "src/lib.rs"

[dependencies]
wgpu = "22.0"
winit = "0.30"
log = "0.4"
env_logger = "0.11"
glam = "0.28"

# bevy_ecs = { version = "0.14", optional = true }

[dev-dependencies]
criterion = { version = "0.5", optional = true }  # для бенчмарков

[[example]]
name = "basic_window"
path = "examples/basic_window.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
debug = true

[workspace]
members = []
